tests/NormalTests/paczka1/small_fuzzy/16693807.err
Error in line 3: 0M2 S810 57,7
Error in line 6: S237 S810 16,4
Error in line 2: NiKoRRp S711 5,1
Error in line 4: 80eJ2zuggec S713 45,7
